cloud animation added

--- a/clouds1.html
+++ b/clouds1.html
@@ -19,6 +19,20 @@
     <div class="cloud cloud4" id="cloud4-mid"></div>
     <div class="cloud cloud4" id="cloud4-front"></div>
 
+
+    <div class="cloud cloud5" id="cloud5-back"></div>
+    <div class="cloud cloud5" id="cloud5-mid"></div>
+    <div class="cloud cloud5" id="cloud5-front"></div>
+    <div class="cloud cloud6" id="cloud6-back"></div>
+    <div class="cloud cloud6" id="cloud6-mid"></div>
+    <div class="cloud cloud6" id="cloud6-front"></div>
+    <div class="cloud cloud7" id="cloud7-back"></div>
+    <div class="cloud cloud7" id="cloud7-mid"></div>
+    <div class="cloud cloud7" id="cloud7-front"></div>
+    <div class="cloud cloud8" id="cloud8-back"></div>
+    <div class="cloud cloud8" id="cloud8-mid"></div>
+    <div class="cloud cloud8" id="cloud8-front"></div>
+
     <svg width="0" height="0">
         <filter id="filter-back">
             <feTurbulence type="fractalNoise" baseFrequency="0.012" numOctaves="4" seed="0" />
